# smart-pairs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_test.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
c/: dequeue.c  dequeue.h  msg.c  msg.h  parser.c  parser.h  thread.h  thread_pool.c  thread_pool.h
doc/: delete.md
lua/backup/: init.lua  space.lua  utils.lua
lua/pairs/: bracket.lua  config.lua  context.lua  delete.lua  enter.lua  fallback.lua  init.lua  pair.lua  region.lua  space.lua  stack.lua  test.lua  utils.lua
tests/backup/: space_spec.lua
tests/backup/bracket/: unbalanced_left_spec.lua
tests/backup/delete/: balanced_spec.lua
tests/backup/enter/: double_tab_indent_spec.lua  space_indent_spec.lua
tests/c/: CMakeLists.txt  test.c  test.h  test_dequeue.c  test_parser_line.c  test_parser_multi_line.c  test_thread_pool.c
tests/pairs/: config_spec.lua  context_spec.lua  pair_spec.lua  pairs_spec.lua  region_spec.lua  space_spec.lua  stack_spec.lua  utils_spec.lua
tests/pairs/bracket/: balanced_spec.lua  unbalanced_left_spec.lua  unbalanced_right_spec.lua
tests/pairs/enter/: double_space_indent_spec.lua  multi_brackets_spec.lua  no_indent_spec.lua  tab_indent_spec.lua
